src/test/deca/syntax/valid/custom/object/printlnx_new.deca
// Description:
//   Print condition with new().
// Results:
//
//
// History:
//    created on 12/01/2022

{
   printlnx(new A());
}
