src/test/deca/syntax/invalid/custom/object/println_new.deca
// Description:
//   Print condition with new().
// Results:
//
//
// History:
//    created on 12/01/2022

{
   println(A()));
}
